chore: load balance quadtree + kdtree and balance forecast